fix collapse menu on mobile

--- a/less/main.less
+++ b/less/main.less
@@ -182,7 +182,7 @@ nav{
                         }
                         &:hover{
                             &:before{
-                                background-color: #e94c3d;
+                                background-color: #b26d73 ;
                                 content: "";
                                 width: 100%;
                             }
@@ -204,7 +204,7 @@ nav{
                             height: 2px;
                            .transition; 
                             width: 100%;
-                            background-color: #e94c3d;
+                            background-color: #b26d73 ;
                         }
                     }
                 }
